--- a/templates/student/studentsignup.html
+++ b/templates/student/studentsignup.html
@@ -54,13 +54,13 @@
         </div>
       </div>
 
-      <div class="form-row">
+      <!--div class="form-row">
         <div class="form-group col-md-12">
           <label for="profile_pic">Profile Picture</label>
           {% render_field studentForm.profile_pic|attr:'required:true' class="form-control" placeholder="" %}
         </div>
         
-      </div>
+      </div-->
 
 
     <button type="submit" class="btn btn-primary">Sign Up</button>
